[gd_scene load_steps=2 format=2]

[ext_resource path="res://src/Extensions/PerspectiveEditor/elements/Editor.gd" type="Script" id=1]

[node name="Editor" type="Panel"]
self_modulate = Color( 1, 1, 1, 0.537255 )
margin_right = 374.0
margin_bottom = 281.0
rect_min_size = Vector2( 375, 150 )
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 7.0
margin_top = 11.0
margin_right = -7.0
margin_bottom = -11.0

[node name="ColorRect" type="Panel" parent="VBoxContainer"]
self_modulate = Color( 0.415686, 0.415686, 0.415686, 0.784314 )
margin_right = 361.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 40 )

[node name="Title" type="Label" parent="VBoxContainer/ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 0, 40 )
mouse_filter = 0
text = "Prespective Editor"
align = 1
valign = 1

[node name="Visibility" type="Button" parent="VBoxContainer/ColorRect"]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -71.0
toggle_mode = true
text = "Minimize"

[node name="Panel" type="Panel" parent="VBoxContainer"]
self_modulate = Color( 0.698039, 0.698039, 0.698039, 0.698039 )
margin_top = 44.0
margin_right = 361.0
margin_bottom = 259.0
rect_clip_content = true
size_flags_vertical = 3
__meta__ = {
"_editor_description_": ""
}

[node name="Content" type="ScrollContainer" parent="VBoxContainer/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/Panel/Content"]
margin_right = 361.0
margin_bottom = 215.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 5

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/Panel/Content/VBoxContainer"]
margin_right = 361.0
margin_bottom = 20.0
alignment = 2

[node name="Label" type="Label" parent="VBoxContainer/Panel/Content/VBoxContainer/HBoxContainer"]
margin_left = 177.0
margin_top = 3.0
margin_right = 337.0
margin_bottom = 17.0
text = "Add a Vanishing point -->"

[node name="AddPoint" type="Button" parent="VBoxContainer/Panel/Content/VBoxContainer/HBoxContainer"]
margin_left = 341.0
margin_right = 361.0
margin_bottom = 20.0
text = "+"

[connection signal="mouse_entered" from="." to="." method="_on_Main_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_Main_mouse_exited"]
[connection signal="visibility_changed" from="." to="." method="_on_Instructions_visibility_changed"]
[connection signal="gui_input" from="VBoxContainer/ColorRect/Title" to="." method="_on_Title_gui_input"]
[connection signal="mouse_entered" from="VBoxContainer/ColorRect/Visibility" to="." method="_on_Visibility_mouse_entered"]
[connection signal="mouse_exited" from="VBoxContainer/ColorRect/Visibility" to="." method="_on_Visibility_mouse_exited"]
[connection signal="toggled" from="VBoxContainer/ColorRect/Visibility" to="." method="_on_Visibility_toggled"]
[connection signal="pressed" from="VBoxContainer/Panel/Content/VBoxContainer/HBoxContainer/AddPoint" to="." method="_on_AddPoint_pressed"]
